# shop-titans-auto

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
output/: city-investment-scan-2025-11-29-151819.csv  city-investment-scan-2025-11-29-152421.csv  city-investment-scan-2025-11-29-152709.csv  city-investment-scan-2025-11-29-153543.csv  city-investment-scan-2025-11-29-155114.csv  city-investment-scan-2025-11-29-155351.csv  city-investment-scan-2025-11-29-160933.csv  city-investment-scan-2025-11-29-161230.csv  city-investment-scan-2025-11-29-163040.csv
src/game_automator/: __init__.py  cli.py  hotkey.py
src/game_automator/core/: __init__.py  capture.py  discord.py  input.py  ocr.py  storage.py  vision.py  window.py
src/game_automator/engine/: __init__.py  models.py  navigator.py  state.py
src/game_automator/workflows/: __init__.py  base.py  city_investment_scan.py
